<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blue_detection_ros</name>
  <version>0.0.1</version>
  <description>Paquete ROS2 para detectar el color azul en tiempo real usando OpenCV.</description>
  <maintainer email="ingenierojorgemtz@todo.todo">ingenierojorgemtz</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencias de build y ejecución -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Dependencias necesarias para el nodo -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- Dependencias de ejecución (installación de paquetes de Python) -->
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

